--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   hive_flutter:
   webview_flutter: ^3.0.4
   shared_preferences:
+  workmanager:
+  flutter_local_notifications: ^9.3.1
+  mockito:
 
 dev_dependencies:
   flutter_test:
